# foldit

./: .gitignore
foldit/: pyproject.toml  requirements.txt
foldit/deploy/: README.md  setup_pi.sh  verify_hardware.py
foldit/foldit/: __init__.py  alert_notifier.py  alerter.py  auto_calibrator.py  calibration.py  camera.py  classifier.py  config.default.yaml  config.py  config_loader.py  conveyor.py  dashboard.py  dashboard_auth.py  data_collector.py  error_recovery.py  event_stream.py  flatness.py  fold_verifier.py  folder.py  frame_quality.py  item_detector.py  main.py  metrics_store.py  ml_classifier.py  motor_controller.py  orientation.py  robot_logger.py  signal_handler.py  simulator.py  size_estimator.py
foldit/tests/: test_alert_notifier.py  test_alerter.py  test_augmentation.py  test_auto_calibrator.py  test_calibration.py  test_camera.py  test_classifier.py  test_config_loader.py  test_conveyor.py  test_dashboard.py  test_dashboard_auth.py  test_data_collector.py  test_dataset.py  test_default_config.py  test_error_recovery.py  test_event_stream.py  test_flatness.py  test_fold_verifier.py  test_folder.py  test_frame_quality.py  test_integration.py  test_item_detector.py  test_label_tool.py  test_main.py  test_metrics_store.py  test_ml_classifier.py  test_ml_integration.py  test_motor_controller.py  test_orientation.py  test_robot_logger.py  test_signal_handler.py  test_simulator.py  test_size_estimator.py  test_v3_pipeline.py  test_v4_integration.py  test_v5_integration.py
foldit/training/: README.md  dataset.py  label_tool.py  train.py  train_model.py  (+1 more)
(+26 files in other folders)
