[project]
name = "foldit"
version = "0.1.0"
description = "Clothes folding robot algorithm"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "RPi.GPIO>=0.7.1",
    "picamera2>=0.3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
